add swagger and refactoring